--- a/SudokuJavaFX 1.2/.classpath
+++ b/SudokuJavaFX 1.2/.classpath
@@ -4,8 +4,8 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
-	<classpathentry exported="true" kind="lib" path="D:/Dokumente/Studium/Programmieren/Arbeit/Pruefungsaufgabe/Informationen/testFx-3.1.2.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="D:/Dokumente/Studium/Programmieren/Arbeit/Pruefungsaufgabe/Informationen/guava-19.0.jar"/>
+	<classpathentry kind="lib" path="libraries/guava-19.0.jar"/>
+	<classpathentry kind="lib" path="libraries/testFx-3.1.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
